seperated busy-indicator from graph (fixes layout problems and looks a bit better)

--- a/networkLayout.css
+++ b/networkLayout.css
@@ -30,11 +30,11 @@ html, body {
 #legendList li {
 	margin-top: 5px;
 }
- 
+
 .popover-title {
 	background: #ccc url("res/jquery-ui/images/ui-bg_highlight-soft_75_cccccc_1x100.png") repeat-x scroll 50% 50%;
 	font-weight: bold;
- }   	
+ }
 .popover-title > span {
 	margin-left: 5px;
 	margin-right: 5px;
@@ -44,14 +44,18 @@ html, body {
 	height: 100%;
 	overflow-y: scroll;
 }
-	
+
+.leftspaced {
+	margin-left: 35px;
+}
+
 html body div#graphContainer div.vis-network div.vis-network-tooltip {
 	width: 15em;
 	background: none;
 	border: none;
 	box-shadow: none;
 }
-	
+
 html body div#graphContainer div.vis-network div.vis-network-tooltip div.popover {
 	display: inline;
 }
